@@ -4,6 +4,8 @@
 	  actual PTP events.
 
 	* library.c: added Nikon CoolPix L1, Kodak C530.
+	* library.c: Added some HP Photosmarts, USB ids
+	  extracted from the .INF files downloadable from hp.com.
 
 2006-11-04  Marcus Meissner  <marcus@jet.franken.de>
 	
